--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ if (LINUX)
 	set(CMAKE_ASM_NASM_OBJECT_FORMAT elf64)
 elseif (WIN32 OR CYGWIN)
 	set(CMAKE_ASM_NASM_OBJECT_FORMAT win64)
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup")
 else()
 	message(FATAL_ERROR "Unknown Target System: \"" ${CMAKE_SYSTEM} "\"!")
 endif()
