--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,11 @@ jobs:
     - uses: actions/checkout@v3
     - uses: ilammy/setup-nasm@v1
 
+    - name: Install libc x86
+      run: |
+        sudo apt-get update
+        sudo apt-get install libc6-x32
+
     - name: Build
       run: make all
 
