--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: ilammy/setup-nasm@v1
 
-    - name: Install libc x86
+    - name: Install gcc-multilib
       run: |
         sudo apt-get update
         sudo apt-get install gcc-multilib
